added a minor grammer change

--- a/app/views/past_events/index.html.erb
+++ b/app/views/past_events/index.html.erb
@@ -5,7 +5,7 @@
   <h2 class="u-push__top">Past Cincy.rb Event Recordings</h2>
   <p class="intro intro--wide u-push__top--none">
     Here is a collection of recorded events from our previous gatherings.
-    Meetups are recorded when there is a speaker presentation, and you'll find them here!
+    Meetups are recorded when there is a speaker presentation. You'll find them here!
   </p>
 </section>
 <%= render :partial => "past_events" %>
