recreate ActiveAdmin stuff w/o ActiveAdmin * create an admin layout * route admins to Past Events after login * simplify RSpec driver config * tweak VCR and WebMock configs

--- a/app/views/admin/shared/_menu.html.erb
+++ b/app/views/admin/shared/_menu.html.erb
@@ -9,6 +9,6 @@
     <li class="menu_item" id="current_user">
       <span><%= current_admin_user.email %></span>
     </li>
-    <li class="menu_item" id="logout"><a data-method="get" href="/admin/logout">Logout</a></li>
+    <li class="menu_item" id="logout"><%= link_to 'Logout', destroy_admin_user_session_path, method: :delete %></li>
   </ul>
 </div>
