--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -35,6 +35,10 @@ h1 {
 a {
   color: $dark-red;
 
+  .jumping {
+    text-decoration: none;
+  }
+
   &:visited {
     color: darken($dark-red, 10%);
   }
