add This Month in Ruby & GH links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
 
     <footer>
       Designed and built with <i class="material-icons u-middle u-color--red" aria-label="love">favorite</i> by
-      <a href='https://launchscout.com/' target='_blank'>Launch Scout</a>
+      <a href='https://launchscout.com/' target='_blank'>Launch Scout</a>. You can contribute on <a href="https://github.com/cincinnatirb/cincyrb" target="_blank">GitHub</a>.
     </footer>
     <!-- Included JS Files -->
   </body>
