--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,7 +9,7 @@
     We currently meet on the third Tuesday of every month to discuss and mob-program on Ruby code.
     Less slides, more code!
   </p>
-  <%# link_to_location_map('Write code with us!', :target => '_blank', :id => 'rsvp') %>
+  <p><%= link_to "Here's", this_month_in_ruby_path %> what's new in Ruby this month.</p>
 </section>
 <section class="u-push__top">
   <div class="u-flex event-header">
