migrated social feed from Twitter to Bluesky * removed Twitter API integration and dependencies * added Bluesky API client and authentication * updated feed component to display Bluesky posts * adjusted styling to match Bluesky post format * updated tests for new feed implementation

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -38,12 +38,13 @@
     <h2>Stay in the loop</h2>
     <p>Follow along and join the conversation to get plugged-in and stay connected!</p>
     <div class="u-push__bottom">
-      <%= link_to("Twitter", 'https://twitter.com/cincinnatirb', target: "_blank", class: "button")%>
+      <%= link_to("Bluesky", 'https://bsky.app/profile/cincyrb.com', target: "_blank", class: "button")%>
       <%= link_to("Discord", 'https://discord.gg/dBjVX9mNB4', target: "_blank", class: "button") %>
     </div>
 
-    <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/cincinnatirb?ref_src=twsrc%5Etfw">Tweets by cincinnatirb</a>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div class="u-push__bottom">
+      <%= render(BlueskyFeedComponent.new(handle: "cincyrb.com")) %>
+    </div>
   </article>
   <article class="offset-col__right">
     <h2>Contact Us</h2>
