--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,20 +14,12 @@
 <section class="u-push__top">
   <div class="u-flex event-header">
     <i class="material-icons u-icon">events</i>
-    <h3>Upcoming Meetups</h3>
+    <div>
+      <h3>Meetings</h3>
+      <p>Click <%= link_to "here", "https://discord.gg/aRGvGUqAmR" %> to join our Discord server to stay in the loop!</p>
+    </div>
   </div>
   <div class="events">
-    <%= render 'next_meeting' %>
-    <%- @upcoming_meetings.each do |meeting| %>
-      <article class="event">
-        <div class="event__date">
-          <%= Time.at(meeting['time']/1000).in_time_zone('America/New_York').strftime('%b %-d') %>
-        </div>
-        <div class="event__time">
-          <%= Time.at(meeting['time']/1000).in_time_zone('America/New_York').strftime('%l:%M %P') %>
-        </div>
-      </article>
-    <%- end %>
     <article class="event">
       <%= link_to("View Past Events", past_events_path) %>
     </article>
