--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,7 @@
       <a href='https://launchscout.com/' target='_blank'>Launch Scout</a>. You can contribute on <a href="https://github.com/cincinnatirb/cincyrb" target="_blank">GitHub</a>.
     </footer>
     <!-- Included JS Files -->
+    <%= javascript_include_tag 'application' %>
   </body>
 
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCA9cUwB8Tzb_hRPdxpUZuH3rF1V6DCvr4&amp;sensor=false&amp;libraries=places'></script>
